fixing margin spacing between headers

--- a/css/style.css
+++ b/css/style.css
@@ -2279,3 +2279,12 @@ body {
 .block-margin-auto {
   margin: 0 auto;
 }
+
+.lh-content h2 {
+  border-top: 1px solid #E4E4E4;
+  margin-top: 20px;
+}
+
+.lh-content h3 {
+  margin-top: 10px;
+}
